# android-clicker

./: .gitignore  LICENSE  README.md  android-clicker  android-clicker.toml  pyproject.toml
android_clicker/: cli.py  config.py  daemon.py  injectors.py  launcher.py  overlay.py  screen_utils.py  widget_utils.py
android_clicker/hotkeys/: __init__.py  _linux.py  _macos.py  _windows.py
android_clicker/modes/: __init__.py  _base.py  custom.py  fixed.py  follow.py  follow_burst.py
android_clicker/platform/: __init__.py  linux.py  macos.py  windows.py
modeconfigs/: follow.burst.toml  follow.toml
