[project]
name = "android-clicker"
version = "0.1.0"
description = "Auto-clicker daemon for Android emulators — Waydroid on Linux (Hyprland) and BlueStacks on macOS and Windows"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
readme = "README.md"
dependencies = [
    "pyautogui; sys_platform == 'darwin'",
]

[project.optional-dependencies]
gui = ["PyQt6", "tomlkit"]
uinput = ["python-evdev"]
screencap = ["Pillow"]
hotkeys = [
    "python-evdev; sys_platform == 'linux'",
    "pynput; sys_platform == 'darwin' or sys_platform == 'win32'",
]
notify = ["win10toast; sys_platform == 'win32'"]
all = [
    "PyQt6",
    "tomlkit",
    "python-evdev; sys_platform == 'linux'",
    "pynput; sys_platform == 'darwin' or sys_platform == 'win32'",
    "Pillow",
    "win10toast; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/ske-u/android-clicker"
Repository = "https://github.com/ske-u/android-clicker"

[project.scripts]
android-clicker = "android_clicker.cli:main"
